Fix media query condition and page width on mobile devices (#58)
* Correct 'tablet' media query to fix 'pc' media query is not used on PCs
* Fix page width in settings page on mobile devices

--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -6,7 +6,7 @@
 }
 
 @mixin tablet {
-  @media (min-width: 760px) {
+  @media (min-width: 760px) and (max-width: 1024px) {
     @content;
   }
 }
